[lib]
proc-macro = true

[package]
name = "ffi-export-proc-macro"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "A proc macro attribute to export Rust functions to FFI more easily"
license = "MIT"

[dependencies]
quote = "0.6.12"
syn = { version = "0.15.35", features = ["full"] }

